--- a/docs/index-HAL.asciidoc
+++ b/docs/index-HAL.asciidoc
@@ -1,77 +1,63 @@
-[cols="3*"]
-|===
-|
-|link:../index.asciidoc[Back to the main Documents index]
-|
-|===
-
-= Hardware Abstract Layer
+== Hardware Abstract Layer
 
 :leveloffset: 1
 
-link:../src/hal/intro.asciidoc[HAL Intro]
+link:../src/hal/intro[HAL Intro]
 
-link:../src/hal/basic_hal.asciidoc[Basic HAL]
+link:../src/hal/basic_hal[Basic HAL]
 
-link:../src/hal/tutorial.asciidoc[HAL Tutorial]
+link:../src/hal/tutorial[HAL Tutorial]
 
-link:../src/hal/hal-examples.asciidoc[HAL examples]
+link:../src/hal/hal-examples[HAL examples]
 
-link:../src/hal/general_ref.asciidoc[HAL General reference]
+link:../src/hal/general_ref[HAL General reference]
 
-link:../src/hal/parallel_port.asciidoc[Parallel Port]
+link:../src/hal/parallel_port[Parallel Port]
 
-link:../src/hal/components.asciidoc[HAL Components]
+link:../src/hal/components[HAL Components]
 
-link:index-instantiated-components.asciidoc[HAL Instantiated Component Man Pages]
+link:index-instantiated-components[HAL Instantiated Component Man Pages]
 
-link:../src/hal/rtcomps.asciidoc[rtcomps]
+link:../src/hal/rtcomps[rtcomps]
 
-link:../src/hal/halmodule.asciidoc[halmodule]
+link:../src/hal/halmodule[halmodule]
 
-link:../src/hal/canonical-devices.asciidoc[Canonical Services]
+link:../src/hal/canonical-devices[Canonical Services]
 
-link:../src/hal/tools.asciidoc[Tools]
+link:../src/hal/tools[Tools]
 
-link:../src/hal/halshow.asciidoc[Halshow]
+link:../src/hal/halshow[Halshow]
 
 === Developing
 
-link:developing/writing-components.asciidoc[Writing HAL Components]
+link:developing/writing-components[Writing HAL Components]
 
-link:../src/hal/instcomp.asciidoc[instcomp]
+link:../src/hal/instcomp[instcomp]
 
-link:../src/hal/comp.asciidoc[comp]
+link:../src/hal/comp[comp]
 
 :leveloffset: 0
 
-= Hardware Drivers
+== Hardware Drivers
 
 :leveloffset: 1
 
-link:../src/drivers/AX5214H.asciidoc[AX5214H]
+link:../src/drivers/AX5214H[AX5214H]
 
-link:../src/drivers/GS2.asciidoc[GS2]
+link:../src/drivers/GS2[GS2]
 
-link:../src/drivers/VFS11.asciidoc[VFS11]
+link:../src/drivers/VFS11[VFS11]
 
-link:../src/drivers/hostmot2.asciidoc[hostmot2]
+link:../src/drivers/hostmot2[hostmot2]
 
-link:../src/drivers/motenc.asciidoc[motenc]
+link:../src/drivers/motenc[motenc]
 
-link:../src/drivers/opto22.asciidoc[opto22]
+link:../src/drivers/opto22[opto22]
 
-link:../src/drivers/pico_ppmc.asciidoc[pico_ppmc]
+link:../src/drivers/pico_ppmc[pico_ppmc]
 
-link:../src/drivers/pluto_p.asciidoc[pluto_p]
+link:../src/drivers/pluto_p[pluto_p]
 
-link:../src/drivers/servo_to_go.asciidoc[servo_to_go]
+link:../src/drivers/servo_to_go[servo_to_go]
 
-link:../src/drivers/GM.asciidoc[GM]
-
-[cols="3*"]
-|===
-|
-|link:../index.asciidoc[Back to the main Documents index]
-|
-|===
+link:../src/drivers/GM[GM]
