--- a/docs/index-developer.asciidoc
+++ b/docs/index-developer.asciidoc
@@ -1,33 +1,19 @@
-[cols="3*"]
-|===
-|link:../index.asciidoc[Back to the main Documents index]
-|
-|===
-
 == Introduction
 
+link:../src/code/Code_Notes[Code_Notes]
 
-link:../src/code/Code_Notes.asciidoc[Code_Notes]
+link:../src/code/NML_Messages[NML_Messages]
 
-link:../src/code/NML_Messages.asciidoc[NML_Messages]
+link:../src/code/Style_Guide[Style_Guide]
 
-link:../src/code/Style_Guide.asciidoc[Style_Guide]
+link:../src/common/Glossary[Glossary]
 
-link:../src/common/Glossary.asciidoc[Glossary]
-
-link:../src/common/GPLD_Copyright.asciidoc[GPLD_Copyrigh]
+link:../src/common/GPLD_Copyright[GPLD_Copyrigh]
 
 == Machinekit How To
 
-- link:buildbot/interpret-buildbot-results.asciidoc[Interpret buildbot results]
+- link:buildbot/interpret-buildbot-results[Interpret buildbot results]
 
-- link:setting-up/developing-setting-up.asciidoc[Setting up development environment]
+- link:setting-up/developing-setting-up[Setting up development environment]
 
-- link:developing/writing-components.asciidoc[Write HAL Components]
-
-[cols="3*"]
-|===
-|
-|link:../index.asciidoc[Back to the main Documents index]
-|
-|===
+- link:developing/writing-components[Write HAL Components]
